xcb-proto (1.2-0.oi1) unstable; urgency=low

  * New upstream release.

 -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sun, 24 Aug 2008 20:15:41 +0700

xcb-proto (1.1-1.oi1) unstable; urgency=low

  * First OpenInkpot build:
    - Maintainer and Uploaders adapted
    - documentation removed

 -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sat, 24 May 2008 01:40:05 +0700

xcb-proto (1.1-1) unstable; urgency=low

  * New upstream release.

 -- Jamey Sharp <sharpone@debian.org>  Tue, 06 Nov 2007 13:37:24 -0800

xcb-proto (1.0-2) unstable; urgency=low

  * Change XS-X-Vcs-Git to XS-Vcs-Git.
  * Add XS-Vcs-Browser field.
  * Upload to unstable.

 -- Josh Triplett <josh@freedesktop.org>  Mon, 21 May 2007 13:06:31 -0700

xcb-proto (1.0-1) experimental; urgency=low

  * New upstream release.
  * The "Thanksgiving" release: We feel thankful to have it released.
  * Add XS-X-Vcs-Git field.
  * Bump debhelper version requirement to 5, to satisfy cdbs and lintian.

 -- Josh Triplett <josh@freedesktop.org>  Fri, 24 Nov 2006 00:28:05 -0800

xcb-proto (0.9.92-1) experimental; urgency=low

  * New upstream release.
  
  [ Josh Triplett ]
  * No longer installs files to /usr/include/X11, so remove Pre-Depends on
    x11-common.
  * Update to Standards-Version 3.7.2 (no changes required).
  * Point specifically to http://xcb.freedesktop.org/dist in copyright file,
    rather than http://xcb.freedesktop.org .
  * Add debian/watch file.
  * Drop Depends line, which only contained empty substitution variables.
  * Add debian/xcb-proto.install, to install the pkgconfig file to /usr/share
    rather than /usr/lib.  Add DEB_DH_INSTALL_SOURCEDIR and DEB_DESTDIR to
    debian/rules, pointing to debian/tmp, to allow use of dh_install for
    renaming files.

 -- Jamey Sharp <sharpone@debian.org>  Sat, 07 Oct 2006 22:55:07 -0700

xcb-proto (0.9-3) experimental; urgency=low

  * Stop running autoreconf in debian/rules, and remove Build-Depends for
    autoconf and automake.