@@ -6,3 +6,8 @@ include /usr/share/cdbs/1/class/autotools.mk
 DEB_MAKE_CHECK_TARGET=check
 DEB_DH_INSTALL_SOURCEDIR=debian/tmp
 DEB_DESTDIR=$(CURDIR)/debian/tmp
+
+pre-build clean:: configure
+
+configure:
+	autoreconf -f -i -v
