@@ -1,6 +1,7 @@
 xcb-proto (1.2-0.oi1) unstable; urgency=low
 
   * New upstream release.
+    - autoreconf during build.
 
  -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sun, 24 Aug 2008 20:15:41 +0700
 
